--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
           <version>RELEASE</version>
           <scope>compile</scope>
       </dependency>
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib-nodep</artifactId>
+      <version>3.3.0</version>
+    </dependency>
   </dependencies>
 
   <build>
